fix-wrap

--- a/style.css
+++ b/style.css
@@ -7,7 +7,24 @@ color : #373d50
         #FF3CAC
         #07385a
 }
+.cmd {
+    display: flex;
+    list-style: none;
+    gap: 0 25px;
+    align-items: center;
+    opacity: 30%;
+    transition: opacity .3s ease-in-out;
+}
+.cmd:hover {
+    opacity: 100%;
+}
 
+.cmd i:hover {
+    color: #4692ef;
+}
+.cmd i {
+    transition: color .3s ease-in-out;
+}
 html, body {
     color: white;
     scroll-behavior: smooth;
@@ -230,20 +247,27 @@ footer:hover {
     box-shadow: 0 4px 0 0 #4692ef;
 }
 .competences, .parcours {
-    margin-top: 50px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
 
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap-reverse;
+    align-items: center;
+    gap: 0 50px;
+}
+.competences h3, .parcours h3 {
+    box-shadow: 0 2px 0 0 #f5d547;
 }
 .parcours .col {
     align-items: center;
     max-width: 150px;
     text-align: center;
 }
+.parcours .row {
+    max-width: 500px;
+}
 .parcours li {
     padding-top: 0;
-    box-shadow: 0 -4px 0 0 #4692ef;
+    box-shadow: 0 -2px 0 0 #4692ef;
 }
 
 
